# 1INF25

./: .gitignore  README.md
2024-1/Clase23/ArbolesClases/: Arma.cpp  Arma.hpp  Armadura.cpp  CMakeLists.txt  Casilla.hpp  Consumible.hpp  Equipo.cpp  Equipo.hpp  Heroe.cpp  Heroe.hpp  Item.cpp  Item.hpp  Juego.cpp  Juego.hpp  Lista.cpp  Lista.hpp  Mapa.hpp  Mochila.cpp  Nodo.cpp  NodoLista.cpp  NodoLista.hpp  Utils.hpp  heroes_dataset.csv  heroes_dataset_1.csv  heroes_dataset_2.csv  main.cpp  reporte.txt
2024-1/Clase23/ArbolesClases/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
2025-2/Clase04/StaticLibrary/CrearBibliotecaEstatica/: CMakeLists.txt
2025-2/Clase04/StaticLibrary/CrearBibliotecaEstatica/src/: AuxiliaryFunctions.cpp
2025-2/Clase04/StaticLibrary/UsaBibliotecaEstatica/: CMakeLists.txt
2025-2/Clase04/StaticLibrary/UsaBibliotecaEstatica/src/: AuxiliaryFunctions.hpp  Overloads.hpp  Reviews.hpp
2025-2/Clase08/ReviewStaticLibrary/UsoLibreria/: CMakeLists.txt
2025-2/Clase13/L5_20241/L5/: CMakeLists.txt
2025-2/Clase13/L5_20241/L5/src/: FuncionesEnteros.cpp  FuncionesRegistros.cpp
2025-2/Clase20/Estantes/: CMakeLists.txt  main.cpp
2025-2/Clase20/Estantes/src/: Biblioteca.cpp  Biblioteca.hpp  Enciclopedia.cpp  Enciclopedia.hpp  Espacio.cpp  Espacio.hpp  Estante.hpp  Libro.cpp  Libro.hpp  Novela.cpp  Novela.hpp
2025-2/Clase23/Juego/: CMakeLists.txt  heroes_dataset_2.csv  main.cpp
2025-2/Clase23/Juego/src/: Casilla.hpp  Consumible.cpp  Heroe.cpp  Heroe.hpp  Item.cpp  Juego.cpp  Juego.hpp  Mochila.cpp  Utils.hpp
2025-2/Clase23/Juego/src/Arbol/: EquipoArbol.cpp  EquipoArbol.hpp  NodoArbol.cpp  NodoArbol.hpp
2025-2/Clase23/Juego/src/Lista/: EquipoLista.cpp  EquipoLista.hpp  NodoLista.cpp  NodoLista.hpp
2025-2/Clase28/RuletaRusa/: CMakeLists.txt  main.cpp
2025-2/Clase28/RuletaRusa/src/: Deudor.cpp  Deudor.hpp  GestorRussianRoulette.cpp  GestorRussianRoulette.hpp  Jugador.cpp  Jugador.hpp  Pagador.cpp  Pagador.hpp  Utils.hpp
2025-2/Clase28/RuletaRusa/src/BibliotecaListaCircularDoble/: ListaCircularDoble.cpp  ListaCircularDoble.hpp  Nodo.cpp  Nodo.hpp
2025-2/Clase28/RuletaRusa/src/Files/: jugadores.csv  reporte_juego.txt  ruleta_rusa.txt
2025-2/Clase29/LAB92025_1/: CMakeLists.txt  main.cpp
2025-2/Clase29/LAB92025_1/data/: EmpresasRegistradas.csv  InfraccionesCometidas.csv  TablaDeInfracciones.csv  VehiculosRegistrados.csv
2025-2/Clase29/LAB92025_1/src/: Empresa.cpp  Empresa.hpp  Infraccion.cpp  Infraccion.hpp  MinisterioTransporte.cpp  MinisterioTransporte.hpp  Multa.cpp  Multa.hpp  Utils.hpp  Vehiculo.cpp  Vehiculo.hpp
2025-2/SOLUCIONES_LAB/Lab07/Solucion/: CMakeLists.txt  GestorStreamers.cpp  GestorStreamers.h  Metrica.cpp  Metrica.h  MetricaBasica.cpp  MetricaBasica.h  MetricaCalidad.cpp  MetricaCalidad.h  MetricaEngagement.cpp  MetricaEngagement.h  Streamer.cpp  Streamer.h  StreamerGratuito.cpp  StreamerGratuito.h  StreamerPago.cpp  StreamerPago.h  Utils.cpp  Utils.h  main.cpp
2026-1/Clase03/OperatorOverloadingReviews/: CMakeLists.txt  main.cpp
2026-1/Clase03/OperatorOverloadingReviews/src/: AuxiliaryFunctions.cpp  Overloads.hpp  Review.hpp  Reviews.hpp
2026-1/Clase04/CrearBibliotecaEstatica/: CMakeLists.txt
2026-1/Clase04/CrearBibliotecaEstatica/MisBibliotecas/: Reviews.hpp
2026-1/Clase04/FuentesBiblioteca/: CMakeLists.txt
2026-1/Clase04/FuentesBiblioteca/Bibliotecas/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.hpp  Review.hpp  Sobrecargas.cpp
2026-1/Clase04/UsaBibliotecaEstatica/: CMakeLists.txt  main.cpp
2026-1/Clase04/UsaBibliotecaEstatica/Bibliotecas/: Sobrecargas.hpp  Utils.hpp
2026-1/Clase06/Repaso/CreacionLibreriaEstaticaUsandoOtra/: CMakeLists.txt  main.cpp
2026-1/Clase06/Repaso/CreacionLibreriaEstaticaUsandoOtra/Librerias/: Estructuras.hpp  Sobrecargas.cpp  Sobrecargas.hpp  Utils.hpp
2026-1/Clase06/Repaso/LibreriaAperturaArchivos/: CMakeLists.txt  main.cpp
2026-1/Clase06/Repaso/LibreriaAperturaArchivos/Librerias/: AperturaArchivos.cpp  AperturaArchivos.hpp
2026-1/Clase13/L5_20252/: CMakeLists.txt  main.cpp
2026-1/Clase13/L5_20252/Librerias/: BibliotecaGenerica.cpp  BibliotecaGenerica.hpp  ListaConEnteros.cpp  ListaConEnteros.hpp  ListaConRegistros.cpp  ListaConRegistros.hpp  Utils.hpp
2026-1/Clase16/JuegoUndertale/: CMakeLists.txt  main.cpp
2026-1/Clase16/JuegoUndertale/ArchivosEntrada/Mapas/: hotland.txt  ruinas.txt  snowdin.txt
2026-1/Clase16/JuegoUndertale/Fuentes/: Casilla.cpp  Casilla.hpp  Juego.cpp  Juego.hpp  Mapa.cpp  Mapa.hpp  Personaje.cpp  Personaje.hpp  Utils.cpp  Utils.hpp
2026-1/Clase20/Figuras/: CMakeLists.txt  main.cpp
2026-1/Clase20/Figuras/Bibliotecas/: Cuadrado.cpp  Cuadrado.hpp  Figura.cpp  Figura.hpp  Triangulo.cpp  Triangulo.hpp
2026-1/Clase22/JuegoUndertale/: CMakeLists.txt  heroes_dataset_1.csv  main.cpp
2026-1/Clase22/JuegoUndertale/Fuentes/: Arma.hpp  Armadura.cpp  Consumible.cpp  Guerrero.cpp  Item.hpp  Juego.hpp  Mapa.hpp  Mochila.cpp  Mochila.hpp  Personaje.cpp  Personaje.hpp
2026-1/Clase22/JuegoUndertale/Fuentes/Arbol/: EquipoArbol.cpp  EquipoArbol.hpp  NodoArbol.cpp  NodoArbol.hpp
2026-1/Clase22/JuegoUndertale/Fuentes/Grafo/: EquipoGrafo.cpp  EquipoGrafo.hpp  NodoVertice.cpp  NodoVertice.hpp
2026-1/Clase22/JuegoUndertale/Fuentes/Lista/: EquipoLista.cpp  EquipoLista.hpp  NodoLista.hpp
2026-1/Clase25/L9252/Laboratorio09_STL/: CMakeLists.txt  main.cpp
2026-1/Clase25/L9252/Laboratorio09_STL/ArchivosDeDatos/: Categorias.csv  Comentarios.csv
2026-1/Clase25/L9252/Laboratorio09_STL/Bibliotecas/: Categoria.cpp  Categoria.hpp  Comentario.cpp  Comentario.hpp  Etiqueta.cpp  Etiqueta.hpp  SistemaDeGestion.cpp  SistemaDeGestion.hpp  Streamer.cpp  Streamer.hpp
2026-1/SOLUCIONES_LABS/Lab04/Solucion/: CMakeLists.txt  main.cpp
clase5/: Alumnos-Cursos.txt
laboratorios_pasados/2024-1/L7/LAB07_BIBLIOTECA_HERENCIA/: CMakeLists.txt  main.cpp
laboratorios_pasados/2025-1/INTEGRADOR/SolucionLab05_2025_1/: CMakeLists.txt  main.cpp
(+2996 files in other folders)
